--- a/i3/config
+++ b/i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Cantarell 18
+font pango:Inconsolata NF 12
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -144,6 +144,7 @@ bindsym $mod+Shift+9 move container to workspace 9
 
 workspace_auto_back_and_forth yes
 assign [class="firefox" instance="Navigator"] $web
+assign [class="Zathura" instance="org.pwmt.zathura"] $web
 
 # floating pop up automatically
 for_window [window_role="pop-up"] floating enable
@@ -153,7 +154,7 @@ for_window [window_role="task_dialog"] floating enable
 for_window [class="Arandr"] floating enable
 
 focus_follows_mouse no
-exec --no-startup-id feh --no-feh-bg --bg-fill ~/.config/i3/feh/background.jpg
+exec --no-startup-id feh --no-feh-bg --bg-fill ~/.config/i3/feh/arch.png
 set $i3lockwall sh ~/.config/i3/scripts/lock.sh
 bindsym $mod+CTRL+Shift+l exec --no-startup-id $i3lockwall
 
@@ -177,10 +178,6 @@ mode "$mode_system" {
     bindsym Escape mode "default"
 }
 bindsym $mod+BackSpace mode "$mode_system"
-
-
-
-
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -264,10 +261,22 @@ client.placeholder 	#000000 #0c0c0c $white2 #000000 0c0c0c
 
 for_window [class="URxvt*"] border pixel 1
 
-# Terminal scratchpad
+# Terminal scratchpad with tmux and three windows: 1. Terminal | 2.Neovim temp file
+
+# First version
+
+# for_window [instance="urxvt_scratchpad"] move to scratchpad, border none
+# bindsym $mod+Shift+t [instance="urxvt_scratchpad"] scratchpad show
+# exec urxvtc -name urxvt_scratchpad \
+# -e tmux -2 new-session -d -s scratchpad \; \
+# new-window -n nvim 'nvim +e /tmp/nvim-tmp.md' \; \
+# attach-session -d -t scratchpad
+
+# Second version
+
 for_window [instance="urxvt_scratchpad"] move to scratchpad, border none
 bindsym $mod+Shift+t [instance="urxvt_scratchpad"] scratchpad show
-exec urxvtc -name urxvt_scratchpad
+exec "$DOTFILES/zsh/scratchpad.sh"
 
 #htop scratchpad
 for_window [instance="htop_scratchpad"] move to scratchpad, border none
@@ -306,3 +315,13 @@ mode "$mode_display" {
     bindsym Escape mode "default"
 }
 bindsym $mod+a mode "$mode_display"
+
+# launch dunst
+exec --no-startup-id dunst
+
+# dunst keyboard shortcuts
+bindsym $mod+x exec dunstctl close-all
+bindsym $mod+Shift+x exec dunstctl history-pop
+
+# Remap Caps Lock key when external keyboard is plugged
+bindsym $mod+z exec "setxkbmap -option 'caps:ctrl_modifier';xcape -e 'Caps_Lock=Escape' &"
