--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -20,7 +20,7 @@ order += "load"
 order += "tztime local"
 
 tztime local {
-    format = " %H:%M:%S %d-%m-%Y "
+    format = "  %H:%M:%S %d-%m-%Y "
 }
 
 disk "/" {
